fix(Notification): ensure correct background set in g100 low contrast

--- a/packages/react/.storybook/styles.scss
+++ b/packages/react/.storybook/styles.scss
@@ -12,18 +12,17 @@
   @include styles.theme(styles.$white);
 }
 
-[data-carbon-theme='g10'] {
-  @include styles.theme(styles.$g10);
-}
+// [data-carbon-theme='g10'] {
+//   @include styles.theme(styles.$g10);
+// }
 
-[data-carbon-theme='g90'] {
-  @include styles.theme(styles.$g90);
-}
+// [data-carbon-theme='g90'] {
+//   @include styles.theme(styles.$g90);
+// }
 
-[data-carbon-theme='g100'] {
-  @include styles.theme(styles.$g100);
-}
-
+// [data-carbon-theme='g100'] {
+//   @include styles.theme(styles.$g100);
+// }
 body {
   background: styles.$background;
   color: styles.$text-primary;
